apps/staging/guppy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guppy-staging
  namespace: nori-cloud
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guppy-staging
  template:
    metadata:
      labels:
        app: guppy-staging
    spec:
      containers:
        - image: ghcr.io/nori-cloud/guppy:sha-7ececbc0a04abd3a4a0179773f52a49ebe1b1a8c
          name: guppy
          ports:
            - containerPort: 3000
