apps/staging/guppy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guppy-staging
  namespace: nori-cloud
  labels:
    app: guppy-staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`guppy.staging.norriswu.me`)
      kind: Rule
      services:
        - name: guppy-staging
          port: 3000
  tls:
    secretName: norriswu-me-staging-wildcard-tls
